--- a/weather/templates/weather/weather.html
+++ b/weather/templates/weather/weather.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css" />
     <style>
-    body {
+    html {
       background-image: url('https://www.survivingwithandroid.com/wp-content/uploads/2014/11/android_weather_app.jpg');
     }
     h1.title{
